Progress concerning time schedules

--- a/Frontend/competition-mode/competition-mode.html
+++ b/Frontend/competition-mode/competition-mode.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/components/material-inputs.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/property-information.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/time-schedule.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/competition-mode.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -50,36 +51,23 @@
             <h1>Wettkampftag! - Gesamt&shy;übersicht</h1>
 
             <div class="oversize-container">
-                <div class="time-container">
-                    <hr class="current-time" />
+                <div class="main time-schedule-container">
                     <div class="time-scale">
-                        <div class="hour full">
-                            <span class="visual-aid"></span>
-                            <span class="whole">15:00</span>
-                            <span class="quarter">15:15</span>
-                            <span class="half">15:30</span>
-                            <span class="three-fourths">15:45</span>
-                        </div>
-                        <div class="hour full">
-                            <span class="visual-aid"></span>
-                            <span class="whole">16:00</span>
-                            <span class="quarter">16:15</span>
-                            <span class="half">16:30</span>
-                            <span class="three-fourths">16:45</span>
-                        </div>
-                        <div class="hour full">
-                            <span class="visual-aid"></span>
-                            <span class="whole">17:00</span>
-                            <span class="quarter">17:15</span>
-                            <span class="half">17:30</span>
-                            <span class="three-fourths">17:45</span>
-                        </div>
-                        <div class="hour short">
-                            <span class="visual-aid"></span>
-                            <span class="whole">18:00</span>
-                        </div>
+                        <span class="time whole start"><span class="emphasize">15:00</span></span>
+                        <span class="time">15:15</span>
+                        <span class="time">15:30</span>
+                        <span class="time">15:45</span>
+                        <span class="time whole"><span class="emphasize">16:00</span></span>
+                        <span class="time">16:15</span>
+                        <span class="time">16:30</span>
+                        <span class="time">16:45</span>
+                        <span class="time whole"><span class="emphasize">17:00</span></span>
+                        <span class="time">17:15</span>
+                        <span class="time">17:30</span>
+                        <span class="time">17:45</span>
+                        <span class="time whole"><span class="emphasize">18:00</span></span>
                     </div>
-                    <div class="fight-places">
+                    <div class="locations">
                         <div class="fight-place" data-name="pool 1">
                             <h2>Pool 1</h2>
                             <div class="category done time-block" data-category="1" style="height: 2.66rem">
@@ -172,36 +160,23 @@
                 </div>
             </div>
 
-            <div class="time-container">
-                <hr class="current-time" />
+            <div class="time-schedule-container">
                 <div class="time-scale">
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">15:00</span>
-                        <span class="quarter">15:15</span>
-                        <span class="half">15:30</span>
-                        <span class="three-fourths">15:45</span>
-                    </div>
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">16:00</span>
-                        <span class="quarter">16:15</span>
-                        <span class="half">16:30</span>
-                        <span class="three-fourths">16:45</span>
-                    </div>
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">17:00</span>
-                        <span class="quarter">17:15</span>
-                        <span class="half">17:30</span>
-                        <span class="three-fourths">17:45</span>
-                    </div>
-                    <div class="hour short">
-                        <span class="visual-aid"></span>
-                        <span class="whole">18:00</span>
-                    </div>
+                    <span class="time whole start"><span class="emphasize">15:00</span></span>
+                    <span class="time">15:15</span>
+                    <span class="time">15:30</span>
+                    <span class="time">15:45</span>
+                    <span class="time whole"><span class="emphasize">16:00</span></span>
+                    <span class="time">16:15</span>
+                    <span class="time">16:30</span>
+                    <span class="time">16:45</span>
+                    <span class="time whole"><span class="emphasize">17:00</span></span>
+                    <span class="time">17:15</span>
+                    <span class="time">17:30</span>
+                    <span class="time">17:45</span>
+                    <span class="time whole"><span class="emphasize">18:00</span></span>
                 </div>
-                <div class="fight-place-container">
+                <div class="locations">
 
                 </div>
             </div>
