--- a/Frontend/tournament-time-schedule/tournament-time-schedule.html
+++ b/Frontend/tournament-time-schedule/tournament-time-schedule.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../css/components/svg-arrow.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/tippy.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/tooltip.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/time-schedule.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/tournament-time-schedule.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -47,35 +48,23 @@
         <p>Falls du Parameter bezüglich der Wettkämpfe (z.B. die Standardlänge eines einzelnen Kampfes) einstellen willst, dann findest du das in den <a class="link" href="#">Einstellungen</a>.</p>
 
         <div class="oversize-container">
-            <div class="time-container">
+            <div class="time-schedule-container">
                 <div class="time-scale">
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">15:00</span>
-                        <span class="quarter">15:15</span>
-                        <span class="half">15:30</span>
-                        <span class="three-fourths">15:45</span>
-                    </div>
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">16:00</span>
-                        <span class="quarter">16:15</span>
-                        <span class="half">16:30</span>
-                        <span class="three-fourths">16:45</span>
-                    </div>
-                    <div class="hour full">
-                        <span class="visual-aid"></span>
-                        <span class="whole">17:00</span>
-                        <span class="quarter">17:15</span>
-                        <span class="half">17:30</span>
-                        <span class="three-fourths">17:45</span>
-                    </div>
-                    <div class="hour short">
-                        <span class="visual-aid"></span>
-                        <span class="whole">18:00</span>
-                    </div>
+                    <span class="time whole start"><span class="emphasize">15:00</span></span>
+                    <span class="time">15:15</span>
+                    <span class="time">15:30</span>
+                    <span class="time">15:45</span>
+                    <span class="time whole"><span class="emphasize">16:00</span></span>
+                    <span class="time">16:15</span>
+                    <span class="time">16:30</span>
+                    <span class="time">16:45</span>
+                    <span class="time whole"><span class="emphasize">17:00</span></span>
+                    <span class="time">17:15</span>
+                    <span class="time">17:30</span>
+                    <span class="time">17:45</span>
+                    <span class="time whole"><span class="emphasize">18:00</span></span>
                 </div>
-                <div class="fight-places">
+                <div class="locations">
                     <div class="fight-place" data-name="pool 1">
                         <h2>Pool 1</h2>
                     </div>
