--- a/Frontend/fighting-system-map/fighting-system-map.html
+++ b/Frontend/fighting-system-map/fighting-system-map.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/material-icons-font.css" type="text/css" />
 
     <!-- Specific style -->
+    <link rel="stylesheet" href="../css/components/context-menu.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/material-inputs.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/primary-button.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/primary-button-floating-container.css" type="text/css" />
@@ -72,6 +73,10 @@
         </div>
     </div>
 
+    <div class="fighting-system-name">
+        Doppel-KO-System mit finalen Tafeln
+    </div>
+
     <main class="map-container no-scrollbar">
 
         <div class="map">
@@ -94,7 +99,7 @@
             <div class="tree clearfix">
                 <div class="column">
                     <div class="fight">
-                        <span class="fighter-name fighter1">Marcus</span>
+                        <span class="fighter-name fighter1 filled">Marcus</span>
                         <span class="fighter-name">Markus</span>
                         <span class="fight-number">1</span>
                     </div>
